[package]
name = "streams-orderednogaps"
version = "0.1.2-alpha.0"
authors = ["Amr Hassan <amr.hassan@gmail.com>"]
description = "A stream combinator for ordering streams by a key ensuring no gaps in the emitted values"
license = "MIT"

[package.metadata.release]
upload-doc = true

[dependencies]
"futures" = "0.1.2"

[dev-dependencies]
rand = "0.5.0-pre.1"
